# rins

./: .gitignore  best_map.pgm  best_map.yaml  neki.yaml
src/exercise3/: CMakeLists.txt  commands.md
src/exercise3/launch/: amcl_simulation.launch  combined.launch
src/exercise3/meshes/: rins_task1_final.dae
src/exercise3/src/: map_goals.cpp
src/exercise4/: CMakeLists.txt  package.xml
src/exercise4/msg/: Coords.msg  Poses.msg
src/exercise4/scripts/: face_localizer_dlib  face_localizer_dnn  face_localizer_haar
src/faces/: CMakeLists.txt  package.xml
src/markers/: CMakeLists.txt  package.xml
src/markers/src/: example.cpp  markerer.cpp
src/movement/: CMakeLists.txt  package.xml
src/movement/src/: hard_coded_goals.cpp
src/task_1/: CMakeLists.txt
